[gd_scene load_steps=4 format=3 uid="uid://ckyut7mb5pl2s"]

[ext_resource type="Script" path="res://scenes/end_game_screen.gd" id="1_4av2x"]
[ext_resource type="Theme" uid="uid://6ceu4e4sceig" path="res://assets/main_theme.tres" id="2_1wiv4"]
[ext_resource type="FontFile" uid="uid://b0d7wbfx8ntg5" path="res://assets/fonts/OpenSans-Bold.ttf" id="4_mwaeu"]

[node name="EndGameScreen" type="Node"]
script = ExtResource("1_4av2x")

[node name="BG" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.517647, 0.721569, 0.698039, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -63.0
offset_top = -84.0
offset_right = 63.0
offset_bottom = -44.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_1wiv4")

[node name="CorrectAnswersLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Correct answers"

[node name="CorrectAnswersValueLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "0/10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PercentageLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "99%"
horizontal_alignment = 1

[node name="NewGameButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.5
offset_top = 187.0
offset_right = 46.5
offset_bottom = 218.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_1wiv4")
theme_override_fonts/font = ExtResource("4_mwaeu")
text = "Новая игра"

[connection signal="pressed" from="NewGameButton" to="." method="_on_new_game_button_pressed"]
